# udevxx

./: .clang-format  CMakeLists.txt  LICENSE  conanfile.py
cmake/Modules/: GlibCompiledResources.cmake
include/devtree/: builder_utilities.hpp  device_tree_model.hpp  main_controller.hpp  main_window.hpp
include/udevxx/: context.hpp  device.hpp  device_enumerator.hpp  device_kind.hpp  device_number.hpp  enumerator.hpp  match_manipulators.hpp  subsystem.hpp  sysname.hpp  syspath.hpp  tagged_types.hpp  udevxx.hpp
include/udevxx/detail/: api_utilities.hpp  deferred.hpp  device_iterator.hpp  list.hpp  matches.hpp  memory_api.hpp  raw_type_owner.hpp  ref_ptr.hpp  strong_type.hpp  thread_aware.hpp
res/devtree/: devtree.desktop  main_window.glade  main_window.res
src/: demo.cpp  enumerate.cpp
src/devtree/: device_tree_model.cpp  devtree.cpp  main_controller.cpp  main_window.cpp
src/enumerate/: enumerate.cpp
src/udevxx/: context.cpp  device.cpp  device_enumerator.cpp  enumerator.cpp  subsystem.cpp  sysname.cpp  syspath.cpp
src/udevxx/detail/: device_iterator.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: package_test.cpp
